--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.png">
-  <title>AI Existential Safety Map</title>
+  <title>Biosecurity Map</title>
   <link rel="stylesheet" href="/styles.css">
   <script src="https://d3js.org/d3.v6.min.js"></script>
         
