--- a/map/index.html
+++ b/map/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; URL='/'">
-  <link rel="canonical" href="https://aisafety.world/">
-  <title>Redirecting to https://aisafety.world/</title>
+  <link rel="canonical" href="https://https://alix-pham.github.io/biosecurity-map/">
+  <title>Redirecting to https://alix-pham.github.io/biosecurity-map/</title>
 </head>
 <body>
-  Redirecting to <a href="https://aisafety.world/">https://aisafety.world/</a>.
+  Redirecting to <a href="https://alix-pham.github.io/biosecurity-map/">https://alix-pham.github.io/biosecurity-map/</a>.
   If you are not automatically redirected, please click the link.
 </body>
 </html>
