change tile redirection

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <div id="grid"></div>
   <div id="tooltip" class="hidden"></div>
   <script src="/script.js"></script>
-  <div id="tiles-mode"><a href="/tiles">Tiles mode</a></div>
+  <div id="tiles-mode"><a href="https://alix-pham.github.io/biosecurity-map/tiles">Tiles mode</a></div>
 </body>
 </html>
