--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.png">
   <title>Biosecurity Map</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="https://alix-pham.github.io/biosecurity-map/styles.css">
   <script src="https://d3js.org/d3.v6.min.js"></script>
         
   <!-- Google tag (gtag.js) -->
@@ -15,7 +15,7 @@
 <body>
   <div id="grid"></div>
   <div id="tooltip" class="hidden"></div>
-  <script src="/script.js"></script>
+  <script src="https://alix-pham.github.io/biosecurity-map/script.js"></script>
   <div id="tiles-mode"><a href="https://alix-pham.github.io/biosecurity-map/tiles">Tiles mode</a></div>
 </body>
 </html>
