/map to main page

--- a/tiles/index.html
+++ b/tiles/index.html
@@ -26,7 +26,7 @@
         <div id="main">
             <div class="title">The Biosecurity Landscape</div>
             <div id="loading">loading...</div>
-            <div id="map-mode"><a href="https://alix-pham.github.io/biosecurity-map/map/">Map mode</a></div>
+            <div id="map-mode"><a href="https://alix-pham.github.io/biosecurity-map/">Map mode</a></div>
             <div id="map">
             </div>
         </div>
