--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.png">
-  <title>Biosecurity Map</title>
+  <title>Biosecurity World</title>
   <link rel="stylesheet" href="https://alix-pham.github.io/biosecurity-map/styles.css">
   <script src="https://d3js.org/d3.v6.min.js"></script>
         
