--- a/tiles/index.html
+++ b/tiles/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="icon" href="/favicon.png" type="image/x-icon"> 
-        <title>Map of the Biosecurity Landscape</title>
+        <title>Biosecurity World</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
@@ -24,7 +24,7 @@
     </head>
     <body class="center">
         <div id="main">
-            <div class="title">The Biosecurity Landscape</div>
+            <div class="title">Biosecurity World</div>
             <div id="loading">loading...</div>
             <div id="map-mode"><a href="https://alix-pham.github.io/biosecurity-map/">Map mode</a></div>
             <div id="map">
